--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ backcall==0.1.0
 bleach==3.1.0
 certifi==2019.9.11
 chardet==3.0.4
+Click==7.0
 decorator==4.4.0
 defusedxml==0.6.0
 entrypoints==0.3
 fire==0.2.1
+Flask==1.1.1
 gast==0.3.2
 grpcio==1.24.1
 h5py==2.10.0
@@ -18,6 +20,7 @@ ipykernel==5.1.2
 ipython==7.8.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.3
 joblib==0.14.0
@@ -42,10 +45,12 @@ onnx==1.6.0
 onnxconverter-common==1.5.5
 onnxmltools==1.5.1
 onnxruntime==0.4.0
+opencv-python==4.1.1.26
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
+Pillow==6.2.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 protobuf==3.10.0
@@ -67,6 +72,8 @@ tensorflow==1.12.2
 termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
+torch==1.3.0
+torchvision==0.4.1
 tornado==6.0.3
 traitlets==4.3.3
 typing-extensions==3.7.4
