--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astor==0.8.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
+cachetools==3.1.1
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
@@ -12,6 +13,12 @@ entrypoints==0.3
 fire==0.2.1
 Flask==1.1.1
 gast==0.3.2
+google-api-core==1.14.3
+google-auth==1.6.3
+google-cloud-core==1.0.3
+google-cloud-storage==1.20.0
+google-resumable-media==0.4.1
+googleapis-common-protos==1.6.0
 grpcio==1.24.1
 h5py==2.10.0
 idna==2.8
@@ -55,13 +62,17 @@ prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 protobuf==3.10.0
 ptyprocess==0.6.0
+pyasn1==0.4.7
+pyasn1-modules==0.2.7
 Pygments==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
+pytz==2019.3
 PyYAML==5.1.2
 pyzmq==18.1.0
 qtconsole==4.5.5
 requests==2.22.0
+rsa==4.0
 scikit-learn==0.21.3
 scipy==1.3.1
 Send2Trash==1.5.0
