fix: a lot of things

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ cachetools==3.1.1
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
+cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
 entrypoints==0.3
 fire==0.2.1
 Flask==1.1.1
+Flask-Cors==3.0.8
 gast==0.3.2
 google-api-core==1.14.3
 google-auth==1.6.3
@@ -40,8 +42,10 @@ Keras==2.1.6
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 keras2onnx==1.5.2
+kiwisolver==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
+matplotlib==3.0.3
 mistune==0.8.4
 more-itertools==7.2.0
 nbconvert==5.6.0
@@ -53,6 +57,7 @@ onnxconverter-common==1.5.5
 onnxmltools==1.5.1
 onnxruntime==0.4.0
 opencv-python==4.1.1.26
+pandas==0.25.2
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
@@ -65,6 +70,7 @@ ptyprocess==0.6.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.7
 Pygments==2.4.2
+pyparsing==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
 pytz==2019.3
